force-app/main/default/objects/mtf__Trigger_Action__mdt/fields/mtf__Active__c.field-meta.xml
<CustomField>
    <fullName>mtf__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this trigger action executes. When unchecked, it does not execute.</description>
    <inlineHelpText>When checked, this trigger action executes. When unchecked, it does not execute.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>