force-app/main/default/objects/mtf__Trigger_Action__mdt/fields/mtf__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>mtf__Apex_Class_Name__c</fullName>
    <description>Enter the name of the Apex Class which defines the trigger actions to be taken.</description>
    <inlineHelpText>Enter the name of the Apex Class which defines the trigger actions to be taken.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>