force-app/main/default/objects/mtf__Trigger_Action__mdt/fields/mtf__Description__c.field-meta.xml
<CustomField>
    <fullName>mtf__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>