force-app/main/default/objects/mtf__Trigger_Action__mdt/validationRules/mtf__Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>mtf__Description_is_Required</fullName>
    <active>true</active>
    <description>You must enter a description for this Trigger Action.</description>
    <errorConditionFormula>ISBLANK(mtf__Description__c)</errorConditionFormula>
    <errorDisplayField>mtf__Description__c</errorDisplayField>
    <errorMessage>You must enter a description for this Trigger Action.</errorMessage>
</ValidationRule>